[package]
name = "dotdash"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Letr <letr007@foxmail.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[package.metadata.deb]
# 包名（由包的 name 字段自动继承）
name = "dotdash"
# 维护者
maintainer = "Letr<letr007@foxmail.com>"
# 依赖项
depends = "$auto"
# 安装路径
assets = [
    ["target/release/dotdash", "usr/bin/", "755"]
]
copyright = "Copyright (C) 2025 Letr"